<resources>
    <string name="app_name">StudyView</string>
    <string name="ForegroundColorSpan">ForegroundColorSpan</string>
    <string name="BackgroundColorSpan">BackgroundColorSpan</string>
    <string name="RelativeSizeSpan">RelativeSizeSpan</string>
    <string name="StrikethroughSpan">StrikethroughSpan</string>
    <string name="UnderlineSpan">UnderlineSpan</string>
    <string name="SuperscriptSpan">SuperscriptSpan</string>
    <string name="SubscriptSpan">SubscriptSpan</string>
    <string name="StyleSpan">StyleSpan</string>
    <string name="ImageSpan">ImageSpan</string>
    <string name="ClickableSpan">ClickableSpan</string>
    <string name="URLSpan">URLSpan</string>
    <string name="SpannableStringBuilder">SpannableStringBuilder</string>


    <string name="TomHardy">汤姆·哈迪给人留下的最初印象是《兄弟连》和《黑鹰坠落》中英俊而带有几分邪气的美国大兵，但他是一位生在伦敦的英国演员。之后哈迪与盖尔·加西亚·贝纳尔合演了独立片《爱奴》，在南非拍摄《西蒙：一位英国退伍兵》，还在《星际迷航记之复仇女神》中出任反派，扮演毕凯舰长的复制人Shinzon一角为科幻迷所熟悉。\n
　　舞台剧方面，2003年哈迪荣获《标准晚报》颁发的新人奖，次年又被劳伦斯·奥利弗奖提名最佳新人。2004年他出演了马修·沃恩执导的英式黑帮片《夹心蛋糕》，与丹尼尔·克雷格、西椰娜·米勒以及本·威士肖同台。他还出演过电视剧《童贞女王-伊丽莎白一世》，以及电视片《吉昂的女儿》、《雾都孤儿》等。2008年凭借电视片《斯图尔特：逆行人生》被英国影视艺术学院奖提名最佳男演员。他将在新版的《呼啸山庄》中扮演希斯克里夫。\n
　　大银幕上，2008年哈迪亮相了盖·里奇的《摇滚帮》，还加盟了摩根·弗里曼、安东尼奥·班德拉斯主演的《亲密如贼》。他主演的动作片《布朗森》将在08年1月的圣丹斯电影节首映，他在片中的演技大受好评。\n
　　2009年，哈迪获邀加盟克里斯托弗·诺兰执导的大片《盗梦空间》，在其中饰演梦境伪造师伊姆斯，该片在2010年上映后的大热为哈迪铺就灿烂星路，顺利进军好莱坞。随后哈迪作品迭出，有爱情喜剧《情敌大战》、众星云集的《锅匠，裁缝，士兵，间谍》、经典童话黑暗版《白雪公主与猎人》、诺兰的《蝙蝠侠前传3：黑暗骑士崛起》、接棒梅尔·吉布森出演的《疯狂的麦克斯4》，前途不可限量。\n</string>

    <string name="ChristianBale">贝尔出生于英国的一个演艺世家，10岁就出演舞台剧，12岁出演电视剧。斯皮尔伯格筹拍《太阳帝国》时看中了他担任男主角，因而步上星途。第一个成人角色是在1992年的迪士尼歌舞片《摇摆狂潮》中载歌载舞。真正的突破是在《美国杀人魔》中饰演男主角，开始受到瞩目。2005年接下蝙蝠侠的斗篷，与克里斯托弗·诺兰合作《蝙蝠侠：开战时刻》(2005)和《蝙蝠侠前传2：黑暗骑士》(2008)，后者更是在全球掀起“蝙蝠”狂潮，以席卷姿态覆盖众多影迷，成为一时热议话题。除去《蝙蝠侠》系列，贝尔主演的其它影片如《致命魔术》、《决斗犹马镇》、《我不在那儿》等都是大导演强阵容的话题之作，可谓风头无两。2009年贝尔还有两部大作问世，分别是《终结者》第四部《终结者：救世军》和与约翰尼·德普联袂出演的《公众之敌》。</string>

    <string name="MarkWahlberg">马克·沃尔伯格的母亲名叫阿尔玛，父亲名叫唐纳德，他有5个哥哥和3个姐姐。出生于美国波士顿，高中时候退学，后获GED资格(一般教育考试)。做过各种各样的工作包括瓦工，甚至因几次违法而被判罪。后独立组建Marky Mark and Funky Bunch乐队发行两张摇滚唱片并巡回演出(《人民的音乐》和《你要相信》)。《完美摇摆》赢得最佳舞曲，这首歌直至今天仍然很流行。他在舞台上的魅力在他脱去衬衫和裤子的时候就更加无法抵挡。1992年，他成为著名时装设计师凯文·克莱恩的内衣模特。他和超级名模凯特·摩丝在一起拍摄的几乎全裸的广告照片则令他备受争议。\n
　　1992年之后马克开始投身电影业，但直到1997年才因主演了《不羁夜》一炮而红，其后他与周润发合演《再战边缘》，2000年的《惊涛骇浪》以及2001年的新版《人猿星球》让他正式成为巨星。近年陆续出演不少动作类型的影片如《偷天换日》、《四兄弟》等，主演的体育励志片《万夫莫敌》也取得了不错的票房成绩。2006年加盟马丁·斯科塞斯的《无间行者》，并获得奥斯卡最佳男配角提名.07年与杰昆·菲尼克斯合演犯罪题材的《我们拥有夜晚》，并在《生死狙击》中扮演一个身手了得的狙击手。08年主演的两部话题之作《灭顶之灾》和《马克思·佩恩》都未能取得好口碑。2009年在彼得·杰克逊的新片《可爱的骨头》中扮演一个失去爱女的悲痛父亲。2010年马克主演了喜剧片《二流警探》和剧情片《斗士》，还在史蒂夫·卡瑞尔和蒂娜·菲主演的喜剧片《约会之夜》中出演配角。</string>

    <string name="WillSmith">美国演员，高中毕业后痴心于歌唱事业，最后决定放弃上大学，做全职的艺人。1989年首次获得葛莱美奖“最佳饶舌歌演唱奖”。进而成为NBC电视影集《活力王子》(The Fresh Prince of Bel Air)的男主角。</string>

    <string name="DenzelWashington">丹泽尔·华盛顿出生于纽约州的弗农山，父亲是一位牧师，母亲是个美容师。14时，他父母的关系开始恶化，丹泽尔和他的姐姐被送进了一所寄宿学校。家庭的影响使华盛顿从小就养成了一种静默沉实的性格，不调皮胡闹，而是喜爱看书，给人一种老成稳重的感觉。1977年丹泽尔从富德汉姆大学毕业并获得了新闻学学士学位，毕业后他就去了旧金山，并在那里获得了美国音乐戏剧学院(ACT)的奖学金。他在美国国家戏剧学院学习了一年的表演，为他日后的成长打下了一个良好的基础。不久，丹泽尔·华盛顿便又回到了纽约。在大学期间就酷爱喜剧的他此时开始在各种电视剧中饰演角色。期间他曾参加了约瑟夫·佩珀导演的《莎士比亚》舞台剧的演出，饰演了一个颇有争议的人物理查三世。丹泽尔·华盛顿进入影坛后，出演了无数的角色，大都是正面光辉的形象。1989年的《光荣》让他第一次声名远播，随后他的电影作品一部接着一部推出，1993年的《费城故事》和《塘鹅暗杀令》，1995年的《赤色风暴》，1996年的《生死豪情》，他在艺术影片与商业影片两个领域都有着不俗的表现。2001年丹泽尔·华盛顿主演的影片《训练日》终于让他成为了第二位获得奥斯卡影帝的黑人演员。近来事业一直保持良好状态，作品不断。</string>
    <string name="string_mitty_motto1">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>
    <string name="string_mitty_motto2">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>

    <string name="string_mitty_motto3">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>

    <string name="string_mitty_motto4">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>
    <string name="string_mitty_motto5">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>


</resources>
